# Vulkanator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Vulkanator.r
include/: VulkanConfig.hpp  VulkanUtils.hpp  Vulkanator.hpp
shaders/: CMakeLists.txt  Vulkanator.frag  Vulkanator.glsl  Vulkanator.vert
source/: VulkanUtils.cpp  Vulkanator.cpp
